# Project-3

./: .gitignore  P3 API.docx  README.md  decode.md  instructions.json  instructions.md  makefile  makefile.win  other.md  requirements.txt  scc.docx  setup.cfg
Project-3/: instructions.md
csee4290/: __init__.py  assembler.py  disassembler.py  output.mem
docs/: decode.md  dev_setup.md  instructions.md  other.md
parser/: BabyTest.asm  FullTest.asm  app.py  assembler.py  disassembler.py  instructions.json  output.lst  output.mem  test.asm  thing.py
scc/: Makefile
scc/src/: cpu.v
scc/tests/: brokenTest1.asm  testbench.v
skeleton/: cpu.v  id.v
test/instructions/: instructions.json
testbench/: Makefile  makefile  output.mem
testbench/src/: alu.v  alu.v.out  cpu.v  cpu.v.out  id.v  id.v.out  reg.v  reg.v.out
testbench/tests/: testbench.v
tests/: BabyTest.asm  BranchTest.asm  FullTest.asm  MoreTesting.asm  garbage_test.asm  test.asm  test_B.AL.asm  test_incorrect_spaces.asm
tests/instruction_tests/: test_B.AL.asm~  test_nohalt.asm
tests/label_tests/: test_nostart.asm  test_notest.asm  test_wrongstart.asm
