[metadata]
name = csee4290
author = CSEE 4290 Fall 2021
version = 0.0.1
description = Class Instruction Set (CIS) tools made for CSEE 4290 at UGA
long_description = file: README.md
long_description_content_type = text/markdown
license = ???
url = https://github.com/Herring-UGACSEE-4290/Project-3


[options]
packages = find:
install_requires =
    Click

[options.entry_points]
console_scripts =
    csee4290 = csee4290:cli